# SFGE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SFGE.sln
SFGE/: SFGE.sln
SFGE/SFGE_lib/: ArchiveManager.cpp  File.cpp  GridBox.cpp  RenderRect.cpp  ResourceManager.cpp  ResourceParser.cpp  ResourceParser.h  SFGE_lib.vcxproj  SFGE_lib.vcxproj.filters
SFGE/SFGE_test_app/: SFGE_test_app.vcxproj
SFGE/SFRPG_lib/: SFRPG_lib.vcxproj
SFGE/SFRPG_unittest/: CMakeLists.txt  SFRPG_unittest.vcxproj
SFGE/include/SFGE/: ArchiveManager.h  Panel.h  RenderRect.h  ResourceInputStream.h  StackedWidget.h
SFGE_lib/: Animation.cpp  ArchiveManager.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  Err.cpp  Field.cpp  File.cpp  FileInputStream.cpp  FileOutputStream.cpp  Frame.cpp  GEDevice.cpp  GridBox.cpp  GuiElement.cpp  GuiManager.cpp  ItemList.cpp  Label.cpp  LineEdit.cpp  MemoryInputStream.cpp  MemoryOutputStream.cpp  MenuBar.cpp  Panel.cpp  PullDownMenu.cpp  RenderRect.cpp  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceParser.cpp  ResourceParser.h  SFGE_lib.vcxproj  SFGE_lib.vcxproj.filters  Slider.cpp  StackedWidget.cpp  StringTable.cpp  TextList.cpp  TextParser.cpp  TextParser.h  Widget.cpp  WidgetCollection.cpp  WidgetStyle.cpp
SFGE_test_app/: CMakeLists.txt  SFGE_test_app.vcxproj  SFGE_test_app.vcxproj.filters  Source.cpp
SFGE_test_app/media/resources/: resources.cfg
SFML_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SFML.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
SFRPG_lib/: Action.cpp  Actor.cpp  CMakeLists.txt  Camera.cpp  Collision.cpp  DynamicObject.cpp  InteractiveObject.cpp  Map.cpp  MapLoader.cpp  MapManager.cpp  MapObject.cpp  MapParser.cpp  MapParser.h  MapSaver.cpp  MapSector.cpp  PathDescription.h  SFRPG_lib.vcxproj  SFRPG_lib.vcxproj.filters  SectorLoader.cpp  SectorLoader.h  StaticObject.cpp  Way.cpp  WayPoint.cpp  World.cpp
SFRPG_map_editor/: Application.cpp  Application.h  CMakeLists.txt  Common.h  EditField.cpp  EditField.h  FSBrowserDialog.cpp  FSBrowserDialog.h  Main.cpp  OpenFileDialog.cpp  OpenFileDialog.h  SFRPG_map_editor.vcxproj  SFRPG_map_editor.vcxproj.filters  SaveFileDialog.cpp  SaveFileDialog.h
SFRPG_map_editor/media/resources/: resources.cfg
SFRPG_map_editor/media/textures/: tiles.cfg
SFRPG_unittest/: CMakeLists.txt  CollisionTest.cpp  Main.cpp  MapLoadingTest.cpp  SFRPG_unittest.vcxproj  SFRPG_unittest.vcxproj.filters  WayFindingTest.cpp  WaySearchTest.cpp  test_map.resm  test_map.rmap
TestApplication/: CMakeLists.txt  Source.cpp  TestApplication.vcxproj  TestApplication.vcxproj.filters  resources.cfg
TestApplication/media/resources/: resources.cfg
include/: Animation.h  AnimationDesc.h  Button.h  CheckBox.h  Err.h  Field.h  File.h  Frame.h  GEDevice.h  GridBox.h  GuiManager.h  Label.h  LineEdit.h  Panel.h  ParticleSystem.h  RenderRect.h  ResourceManager.h  Slider.h  SpriteDesc.h  StackedWidget.h  StringTable.h  TextList.h  TextParser.h  Unicode.h  Widget.h
include/SFGE/: Animation.h  AnimationDesc.h  ArchiveManager.h  Button.h  CheckBox.h  Config.h  DataOutputStream.h  DistortionMesh.h  Err.h  Field.h  File.h  FileInputStream.h  FileOutputStream.h  Frame.h  GEDevice.h  GridBox.h  GuiElement.h  GuiManager.h  ItemList.h  Label.h  LineEdit.h  MemoryInputStream.h  MemoryOutputStream.h  MenuBar.h  MenuItem.h  Panel.h  ParticleSystem.h  PullDownMenu.h  RenderRect.h  ResourceInputStream.h  ResourceManager.h  Slider.h  SpriteDesc.h  StackedWidget.h  StringTable.h  TextList.h  TextParser.h  Unicode.h  Widget.h  WidgetCollection.h  (+1 more)
include/SFRPG/: Action.h  Actor.h  Camera.h  Collision.h  DynamicObject.h  InteractiveObject.h  Map.h  MapLoader.h  MapManager.h  MapObject.h  MapParser.h  MapSaver.h  MapSector.h  MapSectorDesc.h  MapSegmentDesc.h  StaticObject.h  TileDescription.h  Way.h  WayPoint.h  WayPointID.h  World.h
minizip_vs/: minizip.vcxproj  minizip.vcxproj.filters
zlib_vs/: example.vcxproj  example.vcxproj.filters  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.vcxproj  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
